@@ -65,9 +65,9 @@ def _create_user(req, env, check_permissions=True):
 
     # Prohibit some user names that are important for Trac and therefor
     # reserved, even if they're not in the permission store for some reason.
-    if (acctmgr.username_dup_case and username.lower() or username) \
-            in ['anonymous', 'authenticated']:
-        error.message = _("Username %s is not allowed.") % username
+    if username.lower() in ['anonymous', 'authenticated']:
+        error.message = Markup(_("Username %s is not allowed.")
+                               % tag.b(username))
         raise error
 
     # NOTE: A user may exist in the password store but not in the permission
@@ -76,19 +76,14 @@ def _create_user(req, env, check_permissions=True):
     #   and cannot just check for the user being in the permission store.
     #   And obfuscate whether an existing user or group name
     #   was responsible for rejection of this user name.
-    if acctmgr.username_dup_case:
-        # Need to do it more carefully by disregarding case.
-        for store_user in acctmgr.get_users():
-            if store_user.lower == username.lower():
-                error.message = _("""
-                    Another account or group already exists, who's name
-                    differs from %s only by case or is identical.
-                    """) % username
-                raise error
-    elif acctmgr.has_user(username):
-        error.message = _(
-            "Another account or group named %s already exists.") % username
-        raise error
+    for store_user in acctmgr.get_users():
+        # Do it carefully by disregarding case.
+        if store_user.lower() == username.lower():
+            error.message = Markup(_("""
+                Another account or group already exists, who's name
+                differs from %s only by case or is identical.
+                """) % tag.b(username))
+            raise error
 
     # Check whether there is also a user or a group with that name.
     if check_permissions:
@@ -105,17 +100,11 @@ def _create_user(req, env, check_permissions=True):
         #   was responsible for rejection of this username.
         for (perm_user, perm_action) in \
                 perm.PermissionSystem(env).get_all_permissions():
-            if acctmgr.username_dup_case and \
-                    perm_user.lower() == username.lower():
-                error.message = _("""
+            if perm_user.lower() == username.lower():
+                error.message = Markup(_("""
                     Another account or group already exists, who's name
                     differs from %s only by case or is identical.
-                    """) % username
-                raise error
-            elif not acctmgr.username_dup_case and perm_user == username:
-                error.message = _(
-                    "Another account or group named %s already exists.") \
-                    % username
+                    """) % tag.b(username))
                 raise error
 
     # Always exclude some special characters, i.e. 
